// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`keyValueTokenizer should accept a UUID 1`] = `
Object {
  "endIdx": 20,
  "startIdx": 0,
  "type": "KeyValue",
  "value": "ROOM#1234-5678-1234",
}
`;

exports[`keyValueTokenizer should accept periods in keys 1`] = `
Object {
  "endIdx": 10,
  "startIdx": 0,
  "type": "KeyValue",
  "value": "Test.Room",
}
`;

exports[`keyValueTokenizer should tokenize with whitespace around value 1`] = `
Object {
  "endIdx": 7,
  "startIdx": 0,
  "type": "KeyValue",
  "value": "Test",
}
`;

exports[`keyValueTokenizer should tokenize without whitespace 1`] = `
Object {
  "endIdx": 7,
  "startIdx": 0,
  "type": "KeyValue",
  "value": "Test_1",
}
`;
